--- a/github.html
+++ b/github.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Welcome to my Github first project</h1>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque et dolores aut doloribus suscipit magni sint laboriosam animi, a quas qui iure, commodi, veritatis assumenda laborum? Quo quibusdam amet expedita?</p>
     
     <script src="java.js"></script>
 </body>
